# ModernOpenglGB

./: .gitignore  CMakeLists.txt  Modern_OpengGl_GB.sln  Modern_OpengGl_GB.vcxproj  Modern_OpengGl_GB.vcxproj.filters  README.md  imgui.ini  resource.h
PythonScript/: CorePythonMath_wrap.cxx  CorePython_wrap.cxx  PythonScript.vcxproj  PythonScript.vcxproj.filters  Test_wrap.cxx  config.cpp
Wrapper/: CoreMathPython.i  CoreMathPython_wrap.cxx  CorePython.i  CorePython.py  CorePythonMath.i  CorePythonMath.py  CorePython_wrap.cxx  Test.i  Test.py  TestPython.i  Wrapper.vcxproj  Wrapper.vcxproj.filters  resources.i
assets/shader/DebugDepthShader/: DebugDepthShader.frag
assets/shader/DepthMapShader/: DebugDepthShader.geom  DepthMapShader.frag  DepthMapShader.vertex
assets/shader/GizmoShader/: Gizmoshader.vertex
assets/shader/KernelEffectShader/: KernelEffectShader.frag  KernelEffectShader.vertex
assets/shader/NormalShader/: NormalShader.frag  NormalShader.vert  NormalShader.vertex
assets/shader/ShadowShader/: ShadowShader.frag  ShadowShader.vertex
assets/shader/SkyBoxShader/: SkyBoxShader.vert
assets/shader/StencilTest/: StencilTest.frag  StencilTest.vertex
assets/shader/UiShader/: UiShader.frag  UiShader.vert
source/include/App/: App.h
source/include/Core/: AppTime.h  CoreEngine.h
source/include/Physics/: PhysicsEngine.h
source/include/Scripts/: KillZone.h
source/include/Serializer/: Serializer.h
source/include/UI/: ContentBrowser.h  DockingSystem.hpp  Hierarchy.hpp  ImguiLayer.h  Inspector.hpp  InspectorSelectable.h  Log.hpp  SceneView.h  (+1 more)
(+268 files in other folders)
